# chrono

src/: CMakeLists.txt
src/chrono/core/: ChQuaternion.cpp
src/chrono/fea/: ChElementCableANCF.cpp
src/chrono/physics/: ChObject.cpp
src/chrono_modal/: ChModalAssembly.cpp  ChModalAssembly.h
src/chrono_mumps/: CMakeLists.txt  ChMumpsEngine.cpp  ChMumpsEngine.h
src/demos/fea/: CMakeLists.txt  demo_FEA_cablesMKL_Mooringline.cpp  demo_FEA_cablesMUMPS.cpp
src/demos/modal/: CMakeLists.txt  demo_MOD_buckling.cpp  demo_MOD_links.cpp  demo_MOD_slewing_beam.cpp  demo_MOD_slewing_beam_fortest.cpp  demo_MOD_slider_crank.cpp  demo_MOD_talisman.cpp
